# platen-press

./: Cargo.toml  README.md
content/: asdf.md
output/: asdf.html
public/: reset.css
src/: main.rs  templates.rs
templates/: base.stpl  head.stpl
