[package]
name = "platen-press"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
notify = "5.1.0"
pulldown-cmark = { version = "0.9.2", default-features = false }
sailfish = "0.6.0"
walkdir = "2"
